fix word wrap

--- a/_scss/style.scss
+++ b/_scss/style.scss
@@ -55,7 +55,6 @@ a {
 
 pre {
   white-space: pre;
-  word-wrap: break-word;
 }
 
 #container {
